--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+  # PostgreSQL
   db:
     image: postgres:15
     container_name: suzoo_db
@@ -16,29 +17,34 @@ services:
       timeout: 5s
       retries: 5
 
-  # ------------------------------
-  # geth：不使用 healthcheck（或放寬檢查）
-  # ------------------------------
+  # 移除/放寬 geth 容器的 healthcheck
   geth:
     build:
       context: ./geth
       dockerfile: Dockerfile
     container_name: suzoo_geth
+    # Geth 會在 init.sh 中做 init
+    # healthcheck：測試 JSON-RPC
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "-X",
+          "POST",
+          "-H",
+          "Content-Type: application/json",
+          "--data",
+          "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}",
+          "http://localhost:8545"
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     ports:
       - "8545:8545"
     volumes:
       - ./geth/genesis.json:/genesis.json
-    command:
-      - "--http"
-      - "--http.addr"
-      - "0.0.0.0"
-      - "--http.port"
-      - "8545"
-      - "--http.api"
-      - "eth,net,web3,personal"
-      - "--nodiscover"
-      - "--networkid"
-      - "15"
 
   ipfs:
     build:
@@ -64,14 +70,16 @@ services:
       db:
         condition: service_healthy
       geth:
-        condition: service_started
+        condition: service_healthy   # 必須等 geth pass healthcheck
     environment:
       - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
+    # 修改 healthcheck：grep '"status":"ok"'，並加長等待
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
-      interval: 10s
-      timeout: 5s
+      test: ["CMD-SHELL", "curl -s http://localhost:8000/health | grep '\"status\":\"ok\"'"]
+      interval: 30s
+      timeout: 20s
       retries: 5
+      start_period: 180s  # 前3分鐘不做健康檢查，確保有足夠時間載入模型
 
   express:
     build:
@@ -112,7 +120,7 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_frontend
     ports:
-      - "3002:3000"
+      - "3002:3000"   # host:3002 => container:3000
     environment:
       - NODE_ENV=production
 
@@ -134,3 +142,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/wait-for-it.sh:/wait-for-it.sh
+
+# 可加自訂網路(若需要)
+# networks:
+#   default:
+#     driver: bridge
+#     name: soozookaizokuhunter_net
