--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,5 +1,9 @@
 # geth/Dockerfile
 FROM ethereum/client-go:v1.12.0
 WORKDIR /data
-EXPOSE 8545
-CMD ["--http", "--http.addr", "0.0.0.0", "--http.port", "8545", "--http.api", "eth,net,web3,personal", "--nodiscover", "--networkid", "15"]
+
+COPY init.sh /init.sh
+RUN chmod +x /init.sh
+
+# genesis.json 由 volumes 掛載
+ENTRYPOINT ["/init.sh"]
