--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,9 +1,8 @@
-# geth/Dockerfile
 FROM ethereum/client-go:v1.12.0
 WORKDIR /data
 
 COPY init.sh /init.sh
+COPY genesis.json /genesis.json
 RUN chmod +x /init.sh
 
-# genesis.json 由 volumes 掛載
 ENTRYPOINT ["/init.sh"]
