--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -3,6 +3,9 @@ WORKDIR /data
 
 COPY init.sh /init.sh
 COPY genesis.json /genesis.json
+# 如果有 password.txt 也一併 COPY
+# COPY password.txt /data/password.txt
+
 RUN chmod +x /init.sh
 
 ENTRYPOINT ["/init.sh"]
