--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,15 +1,13 @@
 FROM ethereum/client-go:v1.12.0
 WORKDIR /data
 
-# 复制必要文件
 COPY init.sh /init.sh
 COPY genesis.json /genesis.json
-COPY keystore/ /data/keystore/
+
+# 複製 keystore/ 資料夾 (裡面放2個 keystore檔)
+COPY keystore /data/keystore
 COPY password.txt /data/password.txt
 
-# 设置权限
-RUN chmod +x /init.sh && \
-    chmod 644 /data/password.txt && \
-    chmod 600 /data/keystore/*
+RUN chmod +x /init.sh
 
 ENTRYPOINT ["/init.sh"]
