--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
+  ##################################################################
   # 1. PostgreSQL
+  ##################################################################
   db:
     image: postgres:15
     container_name: suzoo_db
@@ -17,16 +19,20 @@ services:
       timeout: 5s
       retries: 5
 
+  ##################################################################
   # 2. Geth 私有鏈 (Clique PoA)
+  ##################################################################
   geth:
     build:
-      context: ./geth
+      context: ./geth       # 需含 Dockerfile、init.sh、genesis.json、password.txt
       dockerfile: Dockerfile
     container_name: suzoo_geth
-    # 掛載 keystore & password，以便自動解鎖帳戶
+    # 將 ./geth/keystore 與 password.txt 掛載進容器，以便解鎖帳戶
     volumes:
       - ./geth/keystore:/data/keystore
       - ./geth/password.txt:/data/password.txt
+    ports:
+      - "8545:8545"
     healthcheck:
       test:
         [
@@ -43,13 +49,13 @@ services:
       interval: 10s
       timeout: 5s
       retries: 10
-    ports:
-      - "8545:8545"
 
-  # 3. IPFS (可選)
+  ##################################################################
+  # 3. IPFS
+  ##################################################################
   ipfs:
     build:
-      context: ./ipfs
+      context: ./ipfs       # 需含 Dockerfile
       dockerfile: Dockerfile
     container_name: suzoo_ipfs
     ports:
@@ -60,10 +66,12 @@ services:
       timeout: 5s
       retries: 5
 
+  ##################################################################
   # 4. FastAPI
+  ##################################################################
   fastapi:
     build:
-      context: ./fastapi
+      context: ./fastapi    # 需含 Dockerfile、requirements.txt、main.py 等
       dockerfile: Dockerfile
     container_name: suzoo_fastapi
     ports:
@@ -82,10 +90,12 @@ services:
       retries: 5
       start_period: 180s
 
+  ##################################################################
   # 5. Express
+  ##################################################################
   express:
     build:
-      context: ./express
+      context: ./express    # 需含 Dockerfile、package.json、server.js 等
       dockerfile: Dockerfile
     container_name: suzoo_express
     ports:
@@ -105,10 +115,12 @@ services:
       timeout: 5s
       retries: 5
 
-  # 6. 爬蟲 (Crawler)
+  ##################################################################
+  # 6. Crawler (偵測侵權)
+  ##################################################################
   crawler:
     build:
-      context: ./crawler
+      context: ./crawler    # 需含 Dockerfile、package.json、index.js 等
       dockerfile: Dockerfile
     container_name: suzoo_crawler
     depends_on:
@@ -117,10 +129,12 @@ services:
     environment:
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
 
-  # 7. 前端 (Frontend)
+  ##################################################################
+  # 7. 前端 (React/Vue/Angular...)
+  ##################################################################
   frontend:
     build:
-      context: ./frontend
+      context: ./frontend   # 需含 Dockerfile、package.json、src/ 等
       dockerfile: Dockerfile
     container_name: suzoo_frontend
     ports:
@@ -128,10 +142,12 @@ services:
     environment:
       - NODE_ENV=production
 
+  ##################################################################
   # 8. Nginx (反向代理)
+  ##################################################################
   nginx:
     build:
-      context: ./nginx
+      context: ./nginx      # 需含 Dockerfile、nginx.conf、wait-for-it.sh 等
       dockerfile: Dockerfile
     container_name: suzoo_nginx
     ports:
