--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,8 +1,7 @@
 FROM ethereum/client-go:v1.12.0
-
 WORKDIR /data
 
-# 請確認下方三個檔案在 geth/ 裡都存在
+# 只複製 genesis.json、init.sh、password.txt
 COPY genesis.json /genesis.json
 COPY init.sh /init.sh
 COPY password.txt /data/password.txt
