--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   ##################################################################
   # 1. PostgreSQL
@@ -33,32 +31,24 @@ services:
       context: ./geth
       dockerfile: Dockerfile
     container_name: suzoo_geth
-
-    # 關鍵：將本機 keystore & password.txt 掛載進容器
     volumes:
-      - ./geth/keystore:/data/keystore
-      - ./geth/password.txt:/data/password.txt
-
+      - ./geth/keystore:/data/keystore:ro
+      - ./geth/password.txt:/data/password.txt:ro
     ports:
       - "8545:8545"
-
     healthcheck:
       test:
         [
           "CMD",
           "curl",
-          "-X",
-          "POST",
-          "-H",
-          "Content-Type: application/json",
-          "--data",
-          "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}",
+          "-X", "POST",
+          "-H", "Content-Type: application/json",
+          "--data", '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}',
           "http://localhost:8545"
         ]
       interval: 10s
       timeout: 5s
       retries: 10
-
   ##################################################################
   # 3. IPFS (如需要)
   ##################################################################
