--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       context: ./geth
       dockerfile: Dockerfile
     container_name: suzoo_geth
+    # 將宿主機的 keystore 與 password.txt 掛載進容器
     volumes:
       - ./geth/keystore:/data/keystore:ro
       - ./geth/password.txt:/data/password.txt:ro
@@ -43,12 +44,13 @@ services:
           "curl",
           "-X", "POST",
           "-H", "Content-Type: application/json",
-          "--data", '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}',
+          "--data", "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}",
           "http://localhost:8545"
         ]
       interval: 10s
       timeout: 5s
       retries: 10
+
   ##################################################################
   # 3. IPFS (如需要)
   ##################################################################
@@ -81,7 +83,7 @@ services:
       geth:
         condition: service_healthy
     environment:
-      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
+      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}   # e.g. http://geth:8545
     healthcheck:
       test: ["CMD-SHELL", "curl -s http://localhost:8000/health | grep '\"status\":\"ok\"'"]
       interval: 30s
