--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     container_name: suzoo_geth
     # 將宿主機的 keystore 與 password.txt 掛載進容器
     volumes:
-      - ./geth/keystore:/data/keystore:ro
-      - ./geth/password.txt:/data/password.txt:ro
+      - ./geth/keystore:/data/keystore
+      - ./geth/password.txt:/data/password.txt
     ports:
       - "8545:8545"
     healthcheck:
