--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,8 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test:
-        [
-          "CMD-SHELL",
-          "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"
-        ]
+        - CMD-SHELL
+        - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
       interval: 5s
       timeout: 5s
       retries: 5
@@ -31,7 +29,7 @@ services:
       context: ./geth
       dockerfile: Dockerfile
     container_name: suzoo_geth
-    # 將宿主機的 keystore 與 password.txt 掛載進容器
+    # 注意：若要只讀，可加 :ro
     volumes:
       - ./geth/keystore:/data/keystore
       - ./geth/password.txt:/data/password.txt
@@ -39,14 +37,15 @@ services:
       - "8545:8545"
     healthcheck:
       test:
-        [
-          "CMD",
-          "curl",
-          "-X", "POST",
-          "-H", "Content-Type: application/json",
-          "--data", "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}",
-          "http://localhost:8545"
-        ]
+        - CMD
+        - curl
+        - -X
+        - POST
+        - -H
+        - Content-Type: application/json
+        - --data
+        - '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}'
+        - http://localhost:8545
       interval: 10s
       timeout: 5s
       retries: 10
@@ -83,9 +82,12 @@ services:
       geth:
         condition: service_healthy
     environment:
-      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}   # e.g. http://geth:8545
+      # 您的 Geth RPC URL，如 http://geth:8545
+      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
     healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:8000/health | grep '\"status\":\"ok\"'"]
+      test:
+        - CMD-SHELL
+        - curl -s http://localhost:8000/health | grep '"status":"ok"'
       interval: 30s
       timeout: 20s
       retries: 5
