--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,23 @@ services:
       - "5432:5432"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    # 若要自訂 pg_hba.conf,可加:
+    # volumes:
+    #   - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    #   - ./db/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+    #   command: ["postgres", "-c", "hba_file=/etc/postgresql/pg_hba.conf"]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"
+        ]
       interval: 5s
       timeout: 5s
       retries: 5
 
   ##################################################################
-  # 2. Geth 私有鏈 (Clique PoA)
+  # 2. Geth 私有鏈 (如有需要)
   ##################################################################
   geth:
     build:
@@ -36,8 +45,10 @@ services:
       test:
         [
           "CMD",
-          "curl","-X","POST","-H","Content-Type: application/json",
-          "--data","{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}",
+          "curl",
+          "-X", "POST",
+          "-H", "Content-Type: application/json",
+          "--data", "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}",
           "http://localhost:8545"
         ]
       interval: 10s
@@ -45,7 +56,7 @@ services:
       retries: 10
 
   ##################################################################
-  # 3. IPFS (如需要)
+  # 3. IPFS (可選)
   ##################################################################
   ipfs:
     build:
@@ -73,10 +84,17 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      geth:
-        condition: service_healthy
     environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
       - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
+      - BLOCKCHAIN_PRIVATE_KEY=${BLOCKCHAIN_PRIVATE_KEY}
+      - CONTRACT_ADDRESS=${CONTRACT_ADDRESS}
+      # 其餘您需要的環境變量 …
+      - NODE_ENV=${NODE_ENV}
     healthcheck:
       test: ["CMD-SHELL", "curl -s http://localhost:8000/health | grep '\"status\":\"ok\"'"]
       interval: 30s
@@ -85,7 +103,7 @@ services:
       start_period: 180s
 
   ##################################################################
-  # 5. Express
+  # 5. Express (Node.js)
   ##################################################################
   express:
     build:
@@ -97,12 +115,32 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      geth:
-        condition: service_started
       fastapi:
         condition: service_healthy
     environment:
       - PORT=3000
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - JWT_SECRET=${JWT_SECRET}
+      - EMAIL_HOST=${EMAIL_HOST}
+      - EMAIL_PORT=${EMAIL_PORT}
+      - EMAIL_USER=${EMAIL_USER}
+      - EMAIL_PASS=${EMAIL_PASS}
+      - EMAIL_FROM=${EMAIL_FROM}
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
+      - BLOCKCHAIN_PRIVATE_KEY=${BLOCKCHAIN_PRIVATE_KEY}
+      - CONTRACT_ADDRESS=${CONTRACT_ADDRESS}
+      - DMCA_AUTO_NOTIFY=${DMCA_AUTO_NOTIFY}
+      - NODE_ENV=${NODE_ENV}
+      - STRIPE_SECRET=${STRIPE_SECRET}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 10s
@@ -110,7 +148,7 @@ services:
       retries: 5
 
   ##################################################################
-  # 6. Crawler (偵測侵權)
+  # 6. 爬蟲 Crawler (偵測侵權)
   ##################################################################
   crawler:
     build:
@@ -157,3 +195,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/wait-for-it.sh:/wait-for-it.sh
+
+# (如需自訂網路，可加下方)
+# networks:
+#   default:
+#     name: soozookaizokuhunter_net
+#     driver: bridge
