--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:3.10-slim
 WORKDIR /app
+
+# 複製需求檔並安裝 Python 套件
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# 複製專案程式碼
 COPY . .
+
 EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
