--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:18-alpine
+FROM node:18
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm install && npm cache clean --force
+
+# 複製 package.json 並安裝依賴
+COPY package*.json ./
+RUN npm install
+
+# 複製專案所有檔案
 COPY . .
+
 EXPOSE 3000
 CMD ["npm", "start"]
