--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,12 +1,12 @@
+# geth/Dockerfile
 FROM ethereum/client-go:v1.11.6
 WORKDIR /data
 
-# 複製 genesis.json、啟動腳本及密碼檔
+# 複製必要檔案
 COPY genesis.json /genesis.json
 COPY init.sh /init.sh
 COPY password.txt /data/password.txt
 
-# 設定啟動腳本可執行
 RUN chmod +x /init.sh
 
 ENTRYPOINT ["/init.sh"]
