--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    networks:
+      - suzoo_net
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
@@ -20,7 +23,7 @@ services:
       retries: 5
 
   ##################################################################
-  # 2. Geth 私有鏈 (Clique PoA)
+  # 2. Geth 私有鏈 (Clique PoA, 單一簽名者 + volume)
   ##################################################################
   geth:
     build:
@@ -28,11 +31,14 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_geth
     volumes:
-      - ./geth/keystore:/data/keystore
-      - ./geth/password.txt:/data/password.txt
+      - geth_data:/data/geth/chaindata                # 保存區塊鏈資料到 volume
+      - ./geth/keystore:/data/keystore:ro             # keystore, read-only
+      - ./geth/password.txt:/data/password.txt:ro     # 密碼檔, read-only
+      - ./geth/genesis.json:/genesis.json:ro          # 創世檔, read-only (init.sh 如果需要)
+    networks:
+      - suzoo_net
     ports:
       - "8545:8545"
-    # 若要健康檢查可使用 attach 或 RPC:
     healthcheck:
       test:
         [
@@ -51,8 +57,13 @@ services:
       context: ./ipfs
       dockerfile: Dockerfile
     container_name: suzoo_ipfs
+    networks:
+      - suzoo_net
     ports:
       - "5001:5001"
+      - "8080:8080"
+    volumes:
+      - ipfs_data:/data/ipfs
     healthcheck:
       test: ["CMD", "ipfs", "id"]
       interval: 10s
@@ -67,6 +78,8 @@ services:
       context: ./fastapi
       dockerfile: Dockerfile
     container_name: suzoo_fastapi
+    networks:
+      - suzoo_net
     ports:
       - "8000:8000"
     depends_on:
@@ -99,6 +112,8 @@ services:
       context: ./express
       dockerfile: Dockerfile
     container_name: suzoo_express
+    networks:
+      - suzoo_net
     ports:
       - "3000:3000"
     depends_on:
@@ -109,7 +124,14 @@ services:
     environment:
       - PORT=3000
       - JWT_SECRET=${JWT_SECRET}
-      # ... 其餘與 FastAPI 共用之環境變數
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - BLOCKCHAIN_RPC_URL=http://geth:8545
+      - CONTRACT_ADDRESS=0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8
+      - NODE_ENV=production
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 10s
@@ -124,11 +146,14 @@ services:
       context: ./crawler
       dockerfile: Dockerfile
     container_name: suzoo_crawler
+    networks:
+      - suzoo_net
     depends_on:
       express:
         condition: service_started
     environment:
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
+      - BLOCKCHAIN_RPC_URL=http://geth:8545
 
   ##################################################################
   # 7. 前端 (React)
@@ -138,6 +163,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: suzoo_frontend
+    networks:
+      - suzoo_net
     ports:
       - "3002:3000"
     environment:
@@ -151,6 +178,8 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     container_name: suzoo_nginx
+    networks:
+      - suzoo_net
     ports:
       - "80:80"
       - "443:443"
@@ -164,3 +193,13 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/wait-for-it.sh:/wait-for-it.sh
+    restart: unless-stopped
+
+volumes:
+  db_data:
+  geth_data:
+  ipfs_data:
+
+networks:
+  suzoo_net:
+    driver: bridge
