--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,205 +1,181 @@
 services:
-  ##################################################################
-  # 1. PostgreSQL (若需要存使用者資料、Email驗證等)
-  ##################################################################
-  db:
-    image: postgres:15
-    container_name: suzoo_db
+  ###################################################################
+  # 1. PostgreSQL (suzoo_postgres)
+  ###################################################################
+  suzoo_postgres:
+    image: postgres:15-alpine
+    container_name: suzoo_postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
-      - suzoo_net
+      - suzoo_network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  ##################################################################
-  # 2. Geth 私有鏈 (Clique PoA, 單一簽名者 + volume)
-  ##################################################################
-  geth:
+  ###################################################################
+  # 2. Geth 私有鏈 (suzoo_geth)
+  ###################################################################
+  suzoo_geth:
     build:
       context: ./geth
       dockerfile: Dockerfile
     container_name: suzoo_geth
-    volumes:
-      - geth_data:/data/geth/chaindata                # 保存區塊鏈資料到 volume
-      - ./geth/keystore:/data/keystore:ro             # keystore, read-only
-      - ./geth/password.txt:/data/password.txt:ro     # 密碼檔, read-only
-      - ./geth/genesis.json:/genesis.json:ro          # 創世檔, read-only (init.sh 如果需要)
     networks:
-      - suzoo_net
+      - suzoo_network
     ports:
-      - "8545:8545"
+      - "8545:8545"        # RPC
+      - "30303:30303"      # P2P
+    volumes:
+      - ./geth/gethdata:/geth/data
+      - ./geth/keystore:/geth/keystore
+      - ./geth/password.txt:/geth/password.txt
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl --silent --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' -H 'Content-Type: application/json' http://localhost:8545 || exit 1"
-        ]
+      # 簡易檢查：呼叫 RPC eth_blockNumber
+      test: ["CMD-SHELL", "curl --silent --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' -H 'Content-Type: application/json' http://localhost:8545 || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 20
 
-  ##################################################################
-  # 3. IPFS (可選)
-  ##################################################################
-  ipfs:
-    build:
-      context: ./ipfs
-      dockerfile: Dockerfile
+  ###################################################################
+  # 3. IPFS (suzoo_ipfs)
+  ###################################################################
+  suzoo_ipfs:
+    image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
     networks:
-      - suzoo_net
+      - suzoo_network
     ports:
-      - "5001:5001"
-      - "8080:8080"
+      - "5001:5001"   # API
+      - "8080:8080"   # Gateway
     volumes:
-      - ipfs_data:/data/ipfs
-    healthcheck:
-      test: ["CMD", "ipfs", "id"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - ./ipfs_data:/data/ipfs
 
-  ##################################################################
-  # 4. FastAPI (後端 + Web3.py + KaiShield.sol 互動)
-  ##################################################################
-  fastapi:
+  ###################################################################
+  # 4. FastAPI 後端服務 (suzoo_fastapi)
+  ###################################################################
+  suzoo_fastapi:
     build:
       context: ./fastapi
       dockerfile: Dockerfile
     container_name: suzoo_fastapi
-    networks:
-      - suzoo_net
-    ports:
-      - "8000:8000"
     depends_on:
-      db:
-        condition: service_healthy
-      geth:
-        condition: service_healthy
+      - suzoo_postgres
+      - suzoo_geth
+      - suzoo_ipfs
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - BLOCKCHAIN_RPC_URL=http://geth:8545
-      - BLOCKCHAIN_PRIVATE_KEY=0x111122223333444455556666777788889999aaaabbbbccccddddeeeeffff0000
-      - CONTRACT_ADDRESS=0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8
-      - NODE_ENV=production
+      - DATABASE_URL=${DATABASE_URL}
+      - ETH_RPC_URL=${ETH_RPC_URL}
+      - IPFS_API_URL=${IPFS_API_URL}
+      - NODE_ENV=${NODE_ENV}
+    networks:
+      - suzoo_network
+    expose:
+      - "8000"
     healthcheck:
       test: ["CMD-SHELL", "curl -s http://localhost:8000/health | grep '\"status\":\"ok\"'"]
       interval: 30s
       timeout: 30s
       retries: 10
-      start_period: 300s
+      start_period: 120s
 
-  ##################################################################
-  # 5. Express (如前端需要 Node.js API / Socket.io 等)
-  ##################################################################
-  express:
+  ###################################################################
+  # 5. Express 後端服務 (suzoo_express)
+  ###################################################################
+  suzoo_express:
     build:
       context: ./express
       dockerfile: Dockerfile
     container_name: suzoo_express
-    networks:
-      - suzoo_net
-    ports:
-      - "3000:3000"
     depends_on:
-      db:
-        condition: service_healthy
-      fastapi:
-        condition: service_healthy
+      - suzoo_postgres
+      - suzoo_geth
     environment:
-      - PORT=3000
+      - DATABASE_URL=${DATABASE_URL}
+      - ETH_RPC_URL=${ETH_RPC_URL}
+      - IPFS_API_URL=${IPFS_API_URL}
       - JWT_SECRET=${JWT_SECRET}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - BLOCKCHAIN_RPC_URL=http://geth:8545
-      - CONTRACT_ADDRESS=0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8
-      - NODE_ENV=production
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
+      - NODE_ENV=${NODE_ENV}
+      - PORT=3000
+    networks:
+      - suzoo_network
+    expose:
+      - "3000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  ##################################################################
-  # 6. Crawler (侵權偵測核心, 模擬外部平台爬蟲, 可整合 IPFS / openCV)
-  ##################################################################
-  crawler:
+  ###################################################################
+  # 6. 爬蟲 (suzoo_crawler)
+  ###################################################################
+  suzoo_crawler:
     build:
       context: ./crawler
       dockerfile: Dockerfile
     container_name: suzoo_crawler
-    networks:
-      - suzoo_net
     depends_on:
-      express:
-        condition: service_started
+      - suzoo_fastapi
+      - suzoo_postgres
     environment:
+      - ETH_RPC_URL=${ETH_RPC_URL}
+      - DATABASE_URL=${DATABASE_URL}
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
-      - BLOCKCHAIN_RPC_URL=http://geth:8545
+    networks:
+      - suzoo_network
+    expose:
+      - "9090"
 
-  ##################################################################
-  # 7. 前端 (React)
-  ##################################################################
-  frontend:
+  ###################################################################
+  # 7. React 前端 (suzoo_frontend)
+  ###################################################################
+  suzoo_frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: suzoo_frontend
     networks:
-      - suzoo_net
-    ports:
-      - "3002:3000"
-    environment:
-      - NODE_ENV=production
+      - suzoo_network
+    expose:
+      - "3000"
 
-  ##################################################################
-  # 8. Nginx (反向代理)
-  ##################################################################
-  nginx:
+  ###################################################################
+  # 8. Nginx 反向代理 (suzoo_nginx)
+  ###################################################################
+  suzoo_nginx:
     build:
       context: ./nginx
       dockerfile: Dockerfile
     container_name: suzoo_nginx
+    depends_on:
+      - suzoo_express
+      - suzoo_fastapi
+      - suzoo_frontend
     networks:
-      - suzoo_net
+      - suzoo_network
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      express:
-        condition: service_healthy
-      fastapi:
-        condition: service_healthy
-      frontend:
-        condition: service_started
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/wait-for-it.sh:/wait-for-it.sh
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      # 將前端 build 出來的檔案掛載到 /usr/share/nginx/html
+      - ./frontend/build:/usr/share/nginx/html:ro
     restart: unless-stopped
 
-volumes:
-  db_data:
-  geth_data:
-  ipfs_data:
-
 networks:
-  suzoo_net:
+  suzoo_network:
     driver: bridge
