--- a/express/package.json
+++ b/express/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "kaishield-express",
+  "name": "suzooka_express_vss",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.3.6",
-    "bcrypt": "^5.1.0",
-    "cloudinary": "^1.32.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
-    "sequelize": "^6.29.3",
-    "web3": "^1.8.2",
-    "stripe": "^11.18.0",
-    "socket.io": "^4.5.4",
-    "crypto-js": "^4.1.1"
+    "dotenv": "^16.0.3",
+    "web3": "^1.10.1",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.32.0",
+    "axios": "^1.3.6",
+    "jsonwebtoken": "^8.5.1",
+    "bcrypt": "^5.1.0"
   }
 }
