--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:18
+# 1) Build Stage
+FROM node:18-alpine as build
 WORKDIR /app
-
-# 複製 package.json 並安裝依賴
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm install
-
-# 複製專案所有檔案
 COPY . .
+RUN npm run build
 
-EXPOSE 3000
-CMD ["npm", "start"]
+# 2) Production Stage (Nginx 只需要build出來的靜態檔)
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
