--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "kaishield-frontend",
+  "name": "kaishield-frontend-vss",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.4",
-    "i18next": "^21.8.14",
-    "react-scripts": "5.0.1",
-    "socket.io-client": "^4.5.4",
-    "react-router-dom": "^6.3.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "5.0.1"
   }
 }
