--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,31 @@
-worker_processes 1;
-events { worker_connections 1024; }
-http {
-    include mime.types;
-    default_type application/octet-stream;
-    sendfile on;
-    keepalive_timeout 65;
+upstream express_service {
+    server suzoo_express:3000;
+}
 
-    server {
-        listen 80;
-        server_name _;
+upstream fastapi_service {
+    server suzoo_fastapi:8000;
+}
 
-        location /socket.io/ {
-            proxy_pass http://express:3000/socket.io/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
+server {
+    listen 80;
+    server_name _;
 
-        location /api/ {
-            proxy_pass http://express:3000/api/;
-            proxy_set_header Host $host;
-        }
+    # React 靜態檔案 (build) => /usr/share/nginx/html
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
 
-        location /fastapi/ {
-            proxy_pass http://fastapi:8000/;
-            proxy_set_header Host $host;
-        }
+    # Express API => /api/xxx
+    location /api/ {
+        proxy_pass http://express_service/;
+        proxy_set_header Host $host;
+    }
 
-        location / {
-            proxy_pass http://frontend:3000/;
-            proxy_set_header Host $host;
-        }
+    # FastAPI => /fastapi/xxx
+    location /fastapi/ {
+        rewrite ^/fastapi/(.*)$ /$1 break;
+        proxy_pass http://fastapi_service/;
+        proxy_set_header Host $host;
     }
 }
