--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,18 @@ services:
     image: postgres:15-alpine
     container_name: suzoo_postgres
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-suzoo_db}
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-      - ./postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data  # 使用命名卷
     ports:
       - "5432:5432"
     networks:
       - suzoo_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]  # 修正變數轉義
       interval: 5s
       timeout: 5s
       retries: 5
@@ -33,14 +33,13 @@ services:
     networks:
       - suzoo_network
     ports:
-      - "8545:8545"        # RPC
-      - "30303:30303"      # P2P
+      - "8545:8545"
+      - "30303:30303"
     volumes:
-      - ./geth/gethdata:/geth/data
+      - geth_data:/geth/data  # 命名卷
       - ./geth/keystore:/geth/keystore
       - ./geth/password.txt:/geth/password.txt
     healthcheck:
-      # 簡易檢查：呼叫 RPC eth_blockNumber
       test: ["CMD-SHELL", "curl --silent --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' -H 'Content-Type: application/json' http://localhost:8545 || exit 1"]
       interval: 10s
       timeout: 5s
@@ -55,10 +54,10 @@ services:
     networks:
       - suzoo_network
     ports:
-      - "5001:5001"   # API
-      - "8080:8080"   # Gateway
+      - "5001:5001"
+      - "8080:8080"
     volumes:
-      - ./ipfs_data:/data/ipfs
+      - ipfs_data:/data/ipfs  # 改用命名卷
 
   ###################################################################
   # 4. FastAPI 後端服務 (suzoo_fastapi)
@@ -69,9 +68,12 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_fastapi
     depends_on:
-      - suzoo_postgres
-      - suzoo_geth
-      - suzoo_ipfs
+      suzoo_postgres:
+        condition: service_healthy  # 確保依賴服務健康後啟動
+      suzoo_geth:
+        condition: service_healthy
+      suzoo_ipfs:
+        condition: service_started
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - ETH_RPC_URL=${ETH_RPC_URL}
@@ -97,8 +99,10 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_express
     depends_on:
-      - suzoo_postgres
-      - suzoo_geth
+      suzoo_postgres:
+        condition: service_healthy
+      suzoo_geth:
+        condition: service_healthy
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - ETH_RPC_URL=${ETH_RPC_URL}
@@ -129,16 +133,16 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_crawler
     depends_on:
-      - suzoo_fastapi
-      - suzoo_postgres
+      suzoo_fastapi:
+        condition: service_started
+      suzoo_postgres:
+        condition: service_healthy
     environment:
       - ETH_RPC_URL=${ETH_RPC_URL}
       - DATABASE_URL=${DATABASE_URL}
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
     networks:
       - suzoo_network
-    expose:
-      - "9090"
 
   ###################################################################
   # 7. React 前端 (suzoo_frontend)
@@ -150,8 +154,10 @@ services:
     container_name: suzoo_frontend
     networks:
       - suzoo_network
-    expose:
-      - "3000"
+    environment:
+      - NODE_ENV=${NODE_ENV}
+    volumes:
+      - ./frontend/build:/app/build  # 確保構建輸出到指定目錄
 
   ###################################################################
   # 8. Nginx 反向代理 (suzoo_nginx)
@@ -172,10 +178,14 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      # 將前端 build 出來的檔案掛載到 /usr/share/nginx/html
-      - ./frontend/build:/usr/share/nginx/html:ro
+      - ./frontend/build:/usr/share/nginx/html:ro  # 掛載前端構建文件
     restart: unless-stopped
 
 networks:
   suzoo_network:
     driver: bridge
+
+volumes:
+  postgres_data:  # PostgreSQL 持久化數據
+  geth_data:      # Geth 區塊鏈數據
+  ipfs_data:      # IPFS 存儲數據
