--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,9 +1,13 @@
 FROM node:18-alpine
-
 WORKDIR /app
-COPY package.json package-lock.json ./
+
+# 只 copy package.json
+COPY package.json ./
+
 RUN npm install
 
-COPY . .
+# 再 copy 其他程式
+COPY . ./
+
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
