--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,9 +1,9 @@
 FROM ethereum/client-go:v1.10.26
 
-# 工作目錄準備
+# 設定工作目錄
 WORKDIR /geth
 
-# 複製創世區塊配置和帳戶資料
+# 複製創世區塊配置與帳戶資料
 COPY genesis.json /geth/genesis.json
 COPY keystore/ /geth/keystore/
 COPY password.txt /geth/password.txt
@@ -12,5 +12,5 @@ COPY password.txt /geth/password.txt
 COPY init.sh /geth/init.sh
 RUN chmod +x /geth/init.sh
 
-# 進入點執行 Geth 初始化並啟動節點
+# 進入點：執行 Geth 初始化並啟動節點
 ENTRYPOINT ["/geth/init.sh"]
