更新最新程式碼

--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -3,7 +3,7 @@ FROM ethereum/client-go:v1.10.26
 # 設定工作目錄
 WORKDIR /geth
 
-# 複製創世區塊配置與帳戶資料
+# 複製創世區塊配置與帳戶資料到容器中
 COPY genesis.json /geth/genesis.json
 COPY keystore/ /geth/keystore/
 COPY password.txt /geth/password.txt
@@ -12,5 +12,8 @@ COPY password.txt /geth/password.txt
 COPY init.sh /geth/init.sh
 RUN chmod +x /geth/init.sh
 
-# 進入點：執行 Geth 初始化並啟動節點
+# 開放 HTTP 端口（如您需要透過 HTTP 存取 geth）
+EXPOSE 8545
+
+# 進入點：執行初始化腳本，初始化後啟動 geth 節點
 ENTRYPOINT ["/geth/init.sh"]
